[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/wizard/WizardExtra.gd" type="Script" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/8Way/8Way.tscn" type="PackedScene" id=4]

[node name="WizardExtra" instance=ExtResource( 1 )]
alignment = 1
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_left = 294.0
margin_right = 346.0
margin_bottom = 360.0
custom_constants/separation = 1
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer" index="0"]
margin_top = 160.0
margin_right = 52.0
margin_bottom = 160.0
rect_min_size = Vector2( 52, 0 )

[node name="OrbPush" parent="VBoxContainer/Control" index="0" instance=ExtResource( 4 )]
unique_name_in_owner = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -62.0
margin_bottom = 0.0
alignment = 1

[node name="HoverButton" type="CheckButton" parent="VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 161.0
margin_right = 52.0
margin_bottom = 173.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Hover"
clip_text = true

[node name="FastFallButton" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 174.0
margin_right = 52.0
margin_bottom = 186.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Fall"
clip_text = true

[node name="ExplodeButton" type="CheckButton" parent="VBoxContainer" index="3"]
unique_name_in_owner = true
margin_top = 187.0
margin_right = 52.0
margin_bottom = 199.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Spark"
clip_text = true
